Fixing the register button visibility for mobile version and margins

--- a/_sass/landing/map.scss
+++ b/_sass/landing/map.scss
@@ -1,3 +1,8 @@
+#gdcr-map {
+  margin-top: 1.5em;
+  display: inline-block;
+}
+
 .landing_page #map {
   $map-border: $gutter*8;
   @include span-columns(8 of 12);
@@ -14,6 +19,7 @@
 }
 
 .landing_page .map-aside {
+  margin-top: 1em;
   @include span-columns(4 of 12);
   @include media($mobile) {
     @include fill-parent;
